--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic
-title: 潘柏信
+title: 朱稼萌
 subtitle: 个人站
-description: 欢迎来到我的个人站~
+description: 欢迎来到我的个人站
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: Zhujiameng
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
-url: "http://baixin.io"
+avatarDesc: UE4 / 摄影 / 读书
+url: "http://zhuzjm.github.io"
 
 # Comment
 comment:
@@ -15,7 +15,7 @@ comment:
 
 # Social
 social:
-    weibo: zhuzjm.lofter.com
+    weibo:
     github: leopardpan
     # twitter:
     mail: leopardpan@icloud.com
