--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@ description: 欢迎来到我的个人站
 avatarTitle: Zhujiameng
 # 头像里面的描述
 avatarDesc: UE4 / 摄影 / 读书
-url: "http://baixin.io"
+url: "https://zhuzjm.github.io"
+
 
 # Comment
 comment:
