--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ comment:
 
 # Social
 social:
-    weibo:
+    weibo: http://zhuzjm.lofter.com/
     github: leopardpan
     # twitter:
-    mail: leopardpan@icloud.com
+    # mail: leopardpan@icloud.com
 
 # 百度统计
 # 使用博客模板请去掉或者更换 id
