--- a/_config.yml
+++ b/_config.yml
@@ -11,26 +11,26 @@ url: "http://www.zhuzjm.me"
 
 # Comment
 comment:
-    disqus: leopard
+    disqus: Zhuzjm
     # uyan: 2143225  # 有言id,登录有言官网申请
 
 # Social
 social:
     weibo: http://zhuzjm.lofter.com/
-    github: leopardpan
+    github: Zhuzjm
     # twitter:
     # mail: leopardpan@icloud.com
 
 # 百度统计
 # 使用博客模板请去掉或者更换 id
-baidu:
-    id: 8ba1c6be0953b6f9c2ba38e57f615421
+#baidu:
+  #  id: 8ba1c6be0953b6f9c2ba38e57f615421
 
 # Google Analytics
 # 使用博客模板请去掉或者更换 id
-ga:
-    id: UA-84134159-3
-    host: auto
+#ga:
+  #  id: UA-84134159-3
+  #  host: auto
 
 
 # 《----------------- 上面的信息修改成你自己的 ---------------------------》
