--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: 欢迎来到我的个人站
 avatarTitle: Zhujiameng
 # 头像里面的描述
 avatarDesc: UE4 / 摄影 / 读书
-url: "http://www.zhuzjm.me"
+url: "www.zhuzjm.me"
 
 
 # Comment
@@ -45,7 +45,7 @@ social:
 
 permalink: /:year/:month/:title/
 # Format
-highlighter:　rouge
+highlighter: rouge
 
 textColor: #FF0000
 
