--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,8 @@ cover_color: clear
 
 # The blog button should not be removed.
 blog_button:
-    title: 博客主页
+    title: 所有文章
+
 
 # Navigation buttons in the front page.s
 nav:
