--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ cover_color: clear
 
 # The blog button should not be removed.
 blog_button:
-    title: 所有文章
+    title: 博客主页
 
 
 # Navigation buttons in the front page.s
