--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: 欢迎来到我的个人站
 # 头像里面的标题
 avatarTitle: Zhujiameng
 # 头像里面的描述
-avatarDesc: UE4 / 摄影 / 读书
+avatarDesc: UE4 / 美术
 url: "www.zhuzjm.me"
 
 
